# evm_balances

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  docker-compose.override.yml  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements1.txt  services.py
.github/workflows/: docker-publish.yml
backend/: Dockerfile  app.py  app_logger.py  constants.py  pyproject.toml  requirements.txt  services.py  wallet_balance_client.py
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/src/: config.js
frontend/src/components/: Balance.svelte  Home.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  Header.svelte  Home.svelte
frontend/src/routes/balance/: +page.svelte
