[project]
name = "backend"
version = "0.1.0"
description = "App to check balances of an evm-compatible wallet"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "litestar>=2.11.0",
  "web3>=7.1.0",
  "environs>=11.0.0",
  "uvicorn>=0.30.6",
]

[tool.uv]
dev-dependencies = ["black>=24.8.0", "ruff>=0.6.2", "pre-commit>=3.8.0"]

[tool.ruff]
lint.select = ["ALL"]
line-length = 79
lint.ignore = [
  "G004",
  "ANN401",
  "D105",
  "D203",
  "D213",
  "ARG002",
  "RUF012",
  "DJ001",
  "PGH003",
  "RUF001",
  "S101",
  "TCH003",
]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.black]
line-length = 79
